# metaFFT

./: CMakeLists.txt  COPYING  Readme.txt
include/metaFFT/: math.h  math_avx.h  radix2.h  radix2_avx.h  radix2_avx_kernel.h  radix2_complex.h  radix2_ctran.h  radix2_ctran_sse2.h  radix2_kernel.h  radix2_kernel_sse2.h  split_radix.h  split_radix_avx.h  split_radix_complex.h  split_radix_ctran.h  split_radix_kernel.h
include/simdpp/: setup_arch.h
include/simdpp/sse/: memory_load.h
test/: CMakeLists.txt  bench_fftw.cpp  bench_helper.h  bench_helper_fftw.h  compare_fftw.cpp  fftw_speed.cpp  nsec_clock.h  radix2_avx_speed.cpp  radix2_precision.cpp  radix2_speed.cpp  radix2_sse2_precision.cpp  radix2_sse2_speed.cpp  split_radix_avx_speed.cpp  split_radix_precision.cpp  split_radix_speed.cpp  test_precision.cpp
