

find_path(FFTW_INCLUDES fftw3.h PATHS ${fftwdir})
find_library(FFTW_LIBRARIES NAMES fftw3 libfftw3-3 PATHS ${fftwdir})
if(FFTW_INCLUDES AND FFTW_LIBRARIES)
    set(fftw 1)
    message(STATUS "FFTW found: ${FFTW_INCLUDES}")
    add_definitions(-DHAVE_FFTW)
    include_directories(${FFTW_INCLUDES})
    if(WIN32)
        file(GLOB dlls ${fftwdir}/*.dll)
        foreach(dll ${dlls})
            if(CMAKE_CONFIGURATION_TYPES)
                foreach(type ${CMAKE_CONFIGURATION_TYPES})
                    file(MAKE_DIRECTORY ${EXECUTABLE_OUTPUT_PATH}/${type})
                    configure_file(${dll} ${EXECUTABLE_OUTPUT_PATH}/${type} COPYONLY)
                endforeach()
            else()
                configure_file(${dll} ${EXECUTABLE_OUTPUT_PATH}/${type} COPYONLY)
            endif()
        endforeach()
    endif()
else()
    message("FFTW not found: ${FFTW_INCLUDES}, ${FFTW_LIBRARIES}, set fftwdir")
endif()


# huge template processing
if(MSVC)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /bigobj")
else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ftemplate-depth=5000")
endif()

macro(test name type)
    add_executable(${name} ${name}${type} ${ARGN})
    if(FFTW_LIBRARIES)
        target_link_libraries(${name} ${FFTW_LIBRARIES})
    endif()
    if(UNIX)
        target_link_libraries(${name} -lpthread -ldl -lm -lstdc++)
    endif()
endmacro()

include_directories(${CMAKE_SOURCE_DIR}/include)

file(GLOB headers ${CMAKE_SOURCE_DIR}/include/metaFFT/*.h)
file(GLOB_RECURSE simdpp ${CMAKE_SOURCE_DIR}/include/simdpp/*.h)
file(GLOB helpers ${CMAKE_SOURCE_DIR}/test/*.h)

list(APPEND headers ${helpers} ${simdpp})

test(radix2_precision .cpp ${headers})
test(radix2_sse2_precision .cpp ${headers})
test(split_radix_precision .cpp ${headers})

if(fftw)
    test(fftw_speed .cpp ${headers})
    test(radix2_speed .cpp ${headers})
    test(radix2_sse2_speed .cpp ${headers})
    test(split_radix_speed .cpp ${headers})
    test(split_radix_avx_speed .cpp ${headers})
endif()
